--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body{
 #to-do-form input{
   background-color: rgb(255, 255, 255);
   border: 2; 
-  color: #fff;
+  color: rgb(14, 13, 13);
   width: 200px;
   height: 50px;
   margin: 20px;
